--- a/Outbreak/outbreak.css
+++ b/Outbreak/outbreak.css
@@ -189,8 +189,16 @@ div.sheet-container {
           div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column button {
             height: 2em;
             text-align: left; }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column div.sheet-header {
+            grid-template-columns: 1fr 10% 10%; }
+            div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column div.sheet-header h3 {
+              font-size: 0.8em; }
+              div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column div.sheet-header h3:nth-of-type(1) {
+                grid-area: 1 / 2 / 1 / 2; }
+              div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column div.sheet-header h3:nth-of-type(2) {
+                grid-area: 1 / 3 / 1 / 3; }
           div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column div.sheet-skill {
-            grid-template-columns: 3em 3em 1fr 10% 10%;
+            grid-template-columns: 1fr 10% 10%;
             display: inline-grid;
             grid-column-gap: 1%; }
             div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column div.sheet-skill label {
