--- a/Outbreak/outbreak.pug
+++ b/Outbreak/outbreak.pug
@@ -54,25 +54,27 @@ include src/pug/_mixins.pug
 					h1.yellow-header(data-i18n='Skills') Skills
 					h2(data-i18n='Basic Skills') Basic Skills
 					.skill-column
-						h3(data-i18n='Adv')
-						h3(data-i18n='Total')
-						each val, key in {'Balance':'perception', 'Brawl': 'strength', 'Climb':'strength', 'Composure':'willpower', 'Dodge':'perception', 'Endurance':'strength', 'Expression':'empathy', 'Grapple':'strength'}
+						.grid.header
+							h3(data-i18n='Adv')
+							h3(data-i18n='Tot')
+						each val, key in {'Balance':['perception', 'willpower'], 'Brawl': ['strength', 'perception'], 'Climb':['strength','willpower'], 'Composure':['willpower', 'empathy'], 'Dodge':['perception', 'strength'], 'Endurance':['strength', 'willpower'], 'Expression':['empathy','perception'], 'Grapple':['strength', 'willpower']}
 							+skillList(key, val)
 					.skill-column
-						h3(data-i18n='Adv')
-						h3(data-i18n='Total')
-						each val, key in {'Hold':'willpower', 'Jump/Leap':'strength', 'Lift/Pull':'strenght', 'Resist Pain':'willpower', 'Search':'perception', 'Spot/Listen':'perception', 'Stealth':'strength'}
+						.grid.header
+							h3(data-i18n='Adv')
+							h3(data-i18n='Tot')
+						each val, key in {'Hold':['willpower','perception'], 'Jump/Leap':['strength','perception'], 'Lift/Pull':['strenght','willpower'], 'Resist Pain':['willpower','strength'], 'Search':['perception','willpower'], 'Spot/Listen':['perception','willpower'], 'Stealth':['perception','willpower']}
 							+skillList(key, val)
 
 					h2(data-i18n='Trained Skills') Trained Skills
 					.skill-column
-						each val in ['Bow/Crossbow', 'Calm Other', 'Deplomacy Persuade', 'Diplomacy Barter/Bribe', 'Diplomacy Command/Coax', 'Diplomacy Detect Motives', 'Diplomacy Intimidate', 'Digital Systems', 'Firearms Pistol', 'Firearms Long Gun', 'First Aid', 'Melee Attack Blunt', 'Melee Attack Pierce', 'Melee Attack Slash', 'Navigation', 'Swim', 'Throw']
-							- const name = val.toLowerCase();
+						each val,key in {'Bow':['perception', 'strenght'], 'Calm Other':['empathy', 'willpower'], 'Persuade':['empathy', 'willpower'], 'Barter':['empathy', 'willpower'], 'Command':['empathy', 'willpower'], 'Detect Motives':['empathy', 'willpower'], 'Intimidate':['empathy', 'willpower'], 'Digital Systems':['perception', 'willpower'], 'Pistol':['perception', 'willpower'], 'Long Gun':['perception', 'willpower'], 'First Aid':['perception', 'willpower'], 'Blunt':['strength', 'willpower'], 'Pierce':['strength', 'willpower'], 'Slash':['strength', 'willpower'], 'Navigation':['perception', 'willpower'], 'Swim':['strength', 'willpower'], 'Throw':['perception', 'strength']}
+							- const name = key.toLowerCase().replace(' ', '_');
 
 					h2(data-i18n='Expert Skills') Expert Skills
 					.skill-column
-						each val in ['Adv Medicine', 'Construct Engineer', 'Specialization','Specialization', 'Martial Arts', 'Pilot', 'Vehicle', 'Vehicle', 'Ride Animal', 'Animal', 'Science', 'Field Of Study', 'Field Of Study', 'Field Of Study', 'Survival', 'Toughness']
-							- const name = val.toLowerCase();
+						each val, key in {'Adv Medicine':['perception', 'willpower'], 'Construct Engineer':['perception', 'willpower'], 'Martial Arts':['strength', 'perception'], 'Pilot':['perception', 'willpower'], 'Ride': ['empathy', 'willpower'], 'Science':['perception', 'willpower'], 'Survival':['perception', 'willpower'], 'Toughness':['strength', 'willpower']}
+							- const name = key.toLowerCase();
 
 
 		.column
@@ -84,5 +86,4 @@ include src/pug/_mixins.pug
 	.log.tab
 
 //- ROLL TEMPLATE
-//include src/pug/_rolltemplate.pug
 include src/pug/rolltemplate.html
