--- a/Outbreak/outbreak.scss
+++ b/Outbreak/outbreak.scss
@@ -211,8 +211,19 @@ div.sheet-container {
               text-align: left;
             }
 
+            div.sheet-header {
+              grid-template-columns: 1fr 10% 10%;
+
+              h3 {  
+                font-size: 0.8em;
+
+                &:nth-of-type(1) { grid-area: 1 / 2 / 1 / 2; }
+                &:nth-of-type(2) { grid-area: 1 / 3 / 1 / 3; }
+              }
+            }
+
             div.sheet-skill {
-              grid-template-columns: 3em 3em 1fr 10% 10%;
+              grid-template-columns: 1fr 10% 10%;
               display: inline-grid;
               grid-column-gap: 1%;
 
