--- a/Outbreak/outbreak.css
+++ b/Outbreak/outbreak.css
@@ -192,7 +192,8 @@ div.sheet-container {
           div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column div.sheet-header {
             grid-template-columns: 1fr 10% 10%; }
             div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column div.sheet-header h3 {
-              font-size: 0.8em; }
+              font-size: 0.8em;
+              text-align: center; }
               div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column div.sheet-header h3:nth-of-type(1) {
                 grid-area: 1 / 2 / 1 / 2; }
               div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column div.sheet-header h3:nth-of-type(2) {
