--- a/Outbreak/outbreak.pug
+++ b/Outbreak/outbreak.pug
@@ -58,28 +58,30 @@ include src/pug/_mixins.pug
 							h3(data-i18n='Adv')
 							h3(data-i18n='Tot')
 						each val, key in {'Balance':['perception', 'willpower'], 'Brawl': ['strength', 'perception'], 'Climb':['strength','willpower'], 'Composure':['willpower', 'empathy'], 'Dodge':['perception', 'strength'], 'Endurance':['strength', 'willpower'], 'Expression':['empathy','perception'], 'Grapple':['strength', 'willpower']}
-							+skillList(key, val)
+							+skillList(key, val[0], val[1])
 					.skill-column
 						.grid.header
 							h3(data-i18n='Adv')
 							h3(data-i18n='Tot')
 						each val, key in {'Hold':['willpower','perception'], 'Jump/Leap':['strength','perception'], 'Lift/Pull':['strenght','willpower'], 'Resist Pain':['willpower','strength'], 'Search':['perception','willpower'], 'Spot/Listen':['perception','willpower'], 'Stealth':['perception','willpower']}
-							+skillList(key, val)
+							+skillList(key, val[0], val[1])
 
 					h2(data-i18n='Trained Skills') Trained Skills
 					.skill-column
 						each val,key in {'Bow':['perception', 'strenght'], 'Calm Other':['empathy', 'willpower'], 'Persuade':['empathy', 'willpower'], 'Barter':['empathy', 'willpower'], 'Command':['empathy', 'willpower'], 'Detect Motives':['empathy', 'willpower'], 'Intimidate':['empathy', 'willpower'], 'Digital Systems':['perception', 'willpower'], 'Pistol':['perception', 'willpower'], 'Long Gun':['perception', 'willpower'], 'First Aid':['perception', 'willpower'], 'Blunt':['strength', 'willpower'], 'Pierce':['strength', 'willpower'], 'Slash':['strength', 'willpower'], 'Navigation':['perception', 'willpower'], 'Swim':['strength', 'willpower'], 'Throw':['perception', 'strength']}
-							- const name = key.toLowerCase().replace(' ', '_');
+							+skillList(key, val[0], val[1])
 
 					h2(data-i18n='Expert Skills') Expert Skills
 					.skill-column
 						each val, key in {'Adv Medicine':['perception', 'willpower'], 'Construct Engineer':['perception', 'willpower'], 'Martial Arts':['strength', 'perception'], 'Pilot':['perception', 'willpower'], 'Ride': ['empathy', 'willpower'], 'Science':['perception', 'willpower'], 'Survival':['perception', 'willpower'], 'Toughness':['strength', 'willpower']}
-							- const name = key.toLowerCase();
+							+skillList(key, val[0], val[1])
 
 
 		.column
-				.grid.box.logo
-					img(alt='Outbreak Character Sheet', src='https://i.imgur.com/css0cBR.png')
+			.grid.box.logo
+				img(alt='Outbreak Character Sheet', src='https://i.imgur.com/css0cBR.png')
+					
+			.grid.box
 
 	.equipment.tab
 
