--- a/Outbreak/src/pug/_mixins.pug
+++ b/Outbreak/src/pug/_mixins.pug
@@ -9,12 +9,9 @@ mixin diceSelect(selectedDefault)
 
 
 //- SKILL BUILDERS
-mixin skillList(skill, attributes)
+mixin skillList(skill, primaryAttribute, secondaryAttribute)
 	.skill
 		-const name = skill.toLowerCase().replace('/', '_').replace(' ', '_');
-		-const primaryAttribute = attributes[0];
-		-const secondaryAttribute = attributes[1];
-
 		input(name=`attr_${name}_button_base` type='hidden' value=`[[(?{Gear Or Kit| None, 0 | Archery, @{ArchTv}+@{${primaryAttribute}_bonus}|Athletic Gear, @{AthlTv}+@{${primaryAttribute}_bonus}|Bludgeon, @{BludTv}+@{${primaryAttribute}_bonus}|Climbing Gear, @{ClimTv}+@{${primaryAttribute}_bonus}|Command Apparatus, @{CommTv}+@{${primaryAttribute}_bonus}|Firefighting, @{FireTv}+@{${primaryAttribute}_bonus}|First Aid Kit, @{FirsTv}+@{${primaryAttribute}_bonus}|Long Gun, @{LngGnTv}+@{${primaryAttribute}_bonus}|Martial Arts, @{MtlArtTv}+@{${primaryAttribute}_bonus}|Medical Gear, @{MediTv}+@{${primaryAttribute}_bonus}|Piercing, @{PierTv}+@{${primaryAttribute}_bonus}|Pistol, @{PistTv}+@{${primaryAttribute}_bonus}|Recon Gear, @{RecoTv}+@{${primaryAttribute}_bonus}|Slashing, @{SlashTv}+@{${primaryAttribute}_bonus}|Survival Kit, @{SurvTv}+@{${primaryAttribute}_bonus}|Swimming/Diving, @{SwimTv}+@{${primaryAttribute}_bonus}|Throwing, @{ThrowTv}+@{${primaryAttribute}_bonus}|Tools, @{ToolTv}+@{${primaryAttribute}_bonus}|Value, @{ValuTv}+@{${primaryAttribute}_bonus}|Vehicles, @{VehiTv}+@{${primaryAttribute}_bonus}})*?{Multiplier|1|2|3|4|5}]]`)
 
 		input(name=`attr_${name}_attributes` type='hidden' value=`(@{${primaryAttribute}}+@{${secondaryAttribute}_bonus})`)
