--- a/Outbreak/outbreak.scss
+++ b/Outbreak/outbreak.scss
@@ -216,6 +216,7 @@ div.sheet-container {
 
               h3 {  
                 font-size: 0.8em;
+                text-align: center;
 
                 &:nth-of-type(1) { grid-area: 1 / 2 / 1 / 2; }
                 &:nth-of-type(2) { grid-area: 1 / 3 / 1 / 3; }
