--- a/Outbreak/src/pug/_mixins.pug
+++ b/Outbreak/src/pug/_mixins.pug
@@ -7,6 +7,15 @@ mixin diceSelect(selectedDefault)
 			- const selectedDie = val === selectedDefault ? selected : '';
 			option(value=val selectedDie)=val
 
+mixin diceSelect(type)
+	select(name=`attr_${type}_dice`)
+		option(data-i18n='0' value='[[0d6]]')
+		option(data-i18n='1' value='[[1d6]]')
+		option(data-i18n='2' value='[[1d6]] [[1d6]]')
+		option(data-i18n='3' value='[[1d6]] [[1d6]] [[1d6]]')
+		option(data-i18n='4' value='[[1d6]] [[1d6]] [[1d6]] [[1d6]]')
+		option(data-i18n='5' value='[[1d6]] [[1d6]] [[1d6]] [[1d6]] [[1d6]]')
+
 
 //- SKILL BUILDERS
 mixin skillList(skill, primaryAttribute, secondaryAttribute)
@@ -20,6 +29,6 @@ mixin skillList(skill, primaryAttribute, secondaryAttribute)
 		button(name=`roll_${skill}` type='roll' value=`&{template:ou} {{name=@{character_name}}} {{roll_name=^{${skill}}}} {{attr=${skill}}} {{Target1=[[@{${name}_total}]]}} {{Target2=[[@{${name}_total}+1]]}} {{skill=VS.}} {{Diff=@{dpDiff}}} {{Spd1=@{dpSpeed}}} {{Dmg=@{dpDmg}}} {{Deplet=@{dpDeplet}}} {{DieDif=@{DiffDie}}} {{DieSpd=@{SpeedDie}}} {{DieDmg=@{DmgDie}}} {{DieDep=@{DepletDie}}} {{result=[[1d100+@{dpDiff} [Diff]]]}} {{dos1=[[@{${name}_total}-19]]}} {{dos2a=[[@{${name}_total}-20]]}} {{dos2b=[[@{${name}_total}-29]]}} {{dos3a=[[@{${name}_total}-30]]}} {{dos3b=[[@{${name}_total}-39]]}} {{dos4a=[[@{${name}_total}-40]]}} {{dos4b=[[@{${name}_total}-49]]}} {{dof1=[[@{${name}_total}+19]]}} {{dof2a=[[@{${name}_total}+20]]}} {{dof2b=[[@{${name}_total}+29]]}} {{dof3a=[[@{${name}_total}+30]]}} {{dof3b=[[@{${name}_total}+39]]}} {{dof4a=[[@{${name}_total}+40]]}} {{dof4b=[[@{${name}_total}+49]]}}`) 
 			span(data-i18n=`${skill}`) #{skill}
 		label
-			input(name=`attr_${name}_advancement` title=`attr_${name}_advancement` type='text' value='0')
+			input.center(name=`attr_${name}_advancement` title=`attr_${name}_advancement` type='number' value='0')
 		label
-			input(name=`attr_${name}` title=`attr_${name}` type='text' value=`[[@{${name}_attributes}+@{${name}_advancement}]]` disabled='true')
+			input.center(name=`attr_${name}` title=`attr_${name}` type='number' value=`[[@{${name}_attributes}+@{${name}_advancement}]]` disabled='true')
