--- a/Outbreak/outbreak.css
+++ b/Outbreak/outbreak.css
@@ -75,7 +75,7 @@ div.sheet-navigation {
     cursor: pointer;
     height: 20px;
     opacity: 0;
-    width: 100%;
+    width: 100% !important;
     z-index: 2; }
     div.sheet-navigation input + span {
       background: #c7c3b0;
@@ -102,6 +102,9 @@ div.sheet-navigation {
 
 .sheet-small-font {
   font-size: 0.5em; }
+
+.sheet-center {
+  text-align: center; }
 
 div.sheet-container {
   display: inline-block;
@@ -190,7 +193,7 @@ div.sheet-container {
             height: 2em;
             text-align: left; }
           div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column div.sheet-header {
-            grid-template-columns: 1fr 10% 10%; }
+            grid-template-columns: 1fr 15% 15%; }
             div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column div.sheet-header h3 {
               font-size: 0.8em;
               text-align: center; }
@@ -199,13 +202,20 @@ div.sheet-container {
               div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column div.sheet-header h3:nth-of-type(2) {
                 grid-area: 1 / 3 / 1 / 3; }
           div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column div.sheet-skill {
-            grid-template-columns: 1fr 10% 10%;
+            grid-template-columns: 1fr 15% 15%;
             display: inline-grid;
             grid-column-gap: 1%; }
             div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column div.sheet-skill label {
               background-color: #fff; }
             div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column div.sheet-skill input {
               border: none; }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-repeating-container {
+            grid-column: 1 / 3; }
+
+div.sheet-dice-box {
+  grid-template-columns: 1fr 1fr 1fr 1fr; }
+  div.sheet-dice-box button {
+    grid-area: 1 / 1 / 1 / 5; }
 
 img.sheet-header {
   height: 30px;
@@ -334,3 +344,11 @@ input[name='attr_tab'][value='log'] ~ div.sheet-log {
   display: inline-block;
   font-size: 25px;
   padding: 5px; }
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0; }
+
+input[type=number] {
+  -moz-appearance: textfield; }
