--- a/Outbreak/outbreak.scss
+++ b/Outbreak/outbreak.scss
@@ -22,7 +22,7 @@ div.sheet-navigation {
     cursor: pointer;
     height: 20px;
     opacity: 0;
-    width: 100%;
+    width: 100% !important;
     z-index: 2;
 
     & + span {
@@ -57,6 +57,10 @@ div.sheet-navigation {
 
 .sheet-small-font {
   font-size: 0.5em;
+}
+
+.sheet-center {
+  text-align: center;
 }
 
 div.sheet-container {
@@ -212,7 +216,7 @@ div.sheet-container {
             }
 
             div.sheet-header {
-              grid-template-columns: 1fr 10% 10%;
+              grid-template-columns: 1fr 15% 15%;
 
               h3 {  
                 font-size: 0.8em;
@@ -224,7 +228,7 @@ div.sheet-container {
             }
 
             div.sheet-skill {
-              grid-template-columns: 1fr 10% 10%;
+              grid-template-columns: 1fr 15% 15%;
               display: inline-grid;
               grid-column-gap: 1%;
 
@@ -237,9 +241,21 @@ div.sheet-container {
               }
             }
           }
+
+          div.sheet-repeating-container {
+            grid-column: 1 / 3;
+          }
         }
       }
     }
+  }
+}
+
+div.sheet-dice-box {
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+
+  button {
+    grid-area: 1 / 1 / 1 / 5;
   }
 }
 
@@ -354,3 +370,12 @@ div.sheet-tab {
 // ROLL TEMPLATE
 //=============================
 @import "src/scss/_rolltemplate";
+
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;}
+
+input[type=number] {
+    -moz-appearance:textfield;}
